2008-07-26  Vadim Kurland  <vadim@vk.crocodile.org>

	* FWObjectDatabase.cpp (FWObjectDatabase::init_id_dict):
	registering standard string ids for standard objects, deleted
	objects and templates libraries.

2008-07-21  Vadim Kurland  <vadim@vk.crocodile.org>

	* fwbuilder.pro: removed unnecessary override in target.path to
	make it install in a proper place on 64 bit machines'

	* Applied patch for gcc 4.3 per bug #2023676: "libfwbuilder does
	not build against gcc 4.3".
	
2008-07-20  Vadim Kurland  <vadim@vk.crocodile.org>

	* NetworkIPv6.cpp (NetworkIPv6::NetworkIPv6): per bug #2023140:
	"Default prefix for IPv6 addresses" setting default netmask to /64
	for NetworkIPv6 object.

2008-07-18  Vadim Kurland  <vadim@vk.crocodile.org>

	* InetAddrMask.cpp (InetAddrMask::dimension):
	InetAddrMask::dimension returns MAXINT for netmask==0 and netmasks
	with length > 32 (in case of ipv6). Need double long and special
	integer arithmetics to calculate real dimension for ipv6
	address/mask combinations with "short" masks. MAXINT should be
	good enough for our purposes for now.

2008-07-17  Vadim Kurland  <vadim@vk.crocodile.org>

	* dns.cpp (list): Using getaddrinfo on all platforms to perform
	dns lookup for different address families (AF_INET or AF_INET6).
	It looks like for it to work on Windows Vista machine needs to be
	configured with routable ipv6 addresses. When machine only had
	Link-local address on fe80:: net, even when ipv6 was enabled,
	getaddrinfo sent proper dns request for AAAA record, got reply but
	did not pass it back to the application. Once machine was
	configured with routable ipv6 address, getaddrinfo started working
	as expected. This problem was not observed on Linux and Mac OS X.

	
2008-07-08  vadim  <vadim@vk.crocodile.org>

	* fwcompiler.pro (LIBS): need to include -lfwbuilder while linking
	fwcompiler library on all Unix platforms because of the linker
	option  -Wl,-Bsymbolic-functions . Discovered this on Ubuntu